OPIK-395 feedback scores failing test [WIP]